<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

    <TextView
        android:id="@+id/name_restaurant_detail"
        android:text="MIMI WOK"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/business_adress_detail"
        android:text="2355 west fourth NY,NY 10022"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>



    <TextView
        android:id="@+id/lettergrade_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="A"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="100sp"
        android:layout_gravity="center"/>


    <TextView
        android:text="@string/violations"
        android:layout_gravity="center"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"/>

    <TextView
        android:id="@+id/critical_flag"
        android:text="@string/critical"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />




    <TextView
        android:id="@+id/violation_code"
        android:text="@string/violationcode"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/points"
        android:text="@string/score"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/violation_des"
        android:text="@string/violatio_descrip"

        android:textSize="16sp" />
    </LinearLayout>
</ScrollView>
